@@ -24,7 +24,8 @@
 
 function build_jacks_editor()
 {
-  $output = "<script src='jacks-editor-app.js'></script>";
+  $output = "<script src='jacks-lib.js'></script>";
+  $output .= "<script src='jacks-editor-app.js'></script>";
   $output .= "<div id='jacks-editor-status'><p>Starting Jacks Editor...</p></div>";
   $output .= "<div id='jacks-editor-pane' class='jacks'></div>";
 
