@@ -1,4 +1,26 @@
 <script>
+//----------------------------------------------------------------------
+// Copyright (c) 2012-2015 Raytheon BBN Technologies
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and/or hardware specification (the "Work") to
+// deal in the Work without restriction, including without limitation the
+// rights to use, copy, modify, merge, publish, distribute, sublicense,
+// and/or sell copies of the Work, and to permit persons to whom the Work
+// is furnished to do so, subject to the following conditions:
+//
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Work.
+//
+// THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+// OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+// WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+// OUT OF OR IN CONNECTION WITH THE WORK OR THE USE OR OTHER DEALINGS
+// IN THE WORK.
+//----------------------------------------------------------------------
 
 function showEditorContainer(rspec_id, rspec_name) {
     $.ajax({
@@ -20,6 +42,7 @@ function updateJacksEditorContainer(rspec, rspec_id, rspec_name, allAms) {
     var rspecText = new XMLSerializer().serializeToString(rspec);
     var jacksInput = null;
     var jacksOutput = null;
+    var currentTopologySites = null;
     
     // make window size at least 700 x 400
     var width = Math.max(700, Math.floor(window.innerWidth * 0.5));
@@ -63,7 +86,7 @@ function updateJacksEditorContainer(rspec, rspec_id, rspec_name, allAms) {
 	});
     canvasOptions.aggregates = aggregates;
 
-    
+
     thisInstance = new window.Jacks({
         mode: 'editor',
         source: 'rspec',
@@ -83,13 +106,16 @@ function updateJacksEditorContainer(rspec, rspec_id, rspec_name, allAms) {
 		jacksInput = input;
 		jacksOutput = output;
 		output.on('fetch-topology', function(rspecs) {
-			var rspec = rspecs[0].rspec;
+		    var rspec = cleanSiteIDsInOutputRSpec(rspecs[0].rspec, currentTopologySites);
 			args = {rspec_id : rspec_id,
 				rspec : rspec};
 			$.post("rspecupdate.php", args);
 		    });
+		output.on('modified-topology', function (data) {
+		    currentTopologySites = data.sites;
+		});
                 input.trigger('change-topology',
-                    [{ rspec: rspecText }]);
+			      [{ rspec: cleanSiteIDsInOutputRSpec(rspecText,currentTopologySites) }]);
             }
         });
 
@@ -156,12 +182,13 @@ function updateJacksContainer(rspec, rspec_id, rspec_name) {
             rspec: true,
             version: false
         },
+	multiSite: true, 
         nodeSelect: true,
         root: '#jacksContainer',
         readyCallback:
             function (input, output) {
                 input.trigger('change-topology',
-                    [{ rspec: rspecText }]);
+			      [{ rspec: cleanSiteIDsInOutputRSpec(rspecText,null) }]);
             }
         });
 
@@ -193,8 +220,6 @@ function updateJacksContainer(rspec, rspec_id, rspec_name) {
                 }
                             
         });
-                        
-
 }
 
 </script>
