@@ -119,6 +119,7 @@ dist_svcweb_DATA = \
         www/portal/jacks-editor-app.css \
 	www/portal/jacks-editor-app.js \
 	www/portal/jacks-editor-app-expanded.php \
+	www/portal/jacks-lib.js \
 	www/portal/join-project.php \
 	www/portal/join-this-project.php \
 	www/portal/listresources.php \
